src/objects/OV_KPI_Dimension_KPI_Name__c.object
<CustomObject>
    <description>One View KPI Dimension - Flat</description>
    <fields>
        <fullName>Code_Text__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Code Text</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <externalId>true</externalId>
        <label>Code</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Direction_Sentiment__c</fullName>
        <label>Direction Sentiment</label>
        <picklist>
            <picklistValues>
                <fullName>UP_GOOD</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>UP_BAD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_Type__c</fullName>
        <label>Value Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visible_Columns__c</fullName>
        <label>Visible Columns</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>One View KPI Dimension KPI Name</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Direction_Sentiment__c</columns>
        <columns>Value_Type__c</columns>
        <columns>Visible_Columns__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>OV KPI Dimension KPI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>One View KPI Dimension KPI Names</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>